--- a/a_data/style.css
+++ b/a_data/style.css
@@ -260,7 +260,7 @@ fieldset {
     width: 100%;
     height: 100%;
     z-index: 2;
-    background-color: #22272d;
+    background-color: #22272d99;
     opacity: 0.8;
 }
 
@@ -274,7 +274,8 @@ fieldset {
     display: inline-block;
     line-height: 72px;    
     font-family: 'Slabo 27px', sans-serif;
-    font-size: 60px;    
+    font-size: 60px;  
+    font-weight: bold;  
 }
 
 .btn {
@@ -490,6 +491,13 @@ fieldset {
 .service-box{
     width: 100%
 }
+/* .service-box img {
+    margin-left: 30px;
+    width: 50%;
+    height: 20%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+} */
 
 .service-icon{
     color: #49494a;
